deployments/pathweb/qbittorrent/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media-services
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  serviceName: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-baldric
      containers:
      - name: qbittorrent
        image: ghcr.io/hotio/qbittorrent:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 51130
          name: torrent-tcp
        - containerPort: 51130
          name: torrent-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: empty
          mountPath: /dowbloads
          readOnly: true
        - name: downloads
          mountPath: /downloads/Torrents
          subPath: Torrents
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads
      - name: empty
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
