deployments/pathweb/qbittorrent/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media-services
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
  - port: 8112
    targetPort: http
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrent
  namespace: media-services
  labels:
    app.kubernetes.io/name: qbittorrent
    external-dns: local-pdns
    lb-location: rfhome
  annotations:
    external-dns.alpha.kubernetes.io/hostname: qbittorrent-torrent.services.home.yrf.me
spec:
  type: LoadBalancer
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:    
  - port: 51130
    targetPort: torrent-tcp
    name: torrent-tcp
    protocol: TCP
  - port: 51130
    targetPort: torrent-udp
    name: torrent-udp
    protocol: UDP
