deployments/pathweb/qbittorrent/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
        - matchExpressions:
            - key: "k8s:app.kubernetes.io/name"
              operator: In
              values:
              - sonarr
              - radarr
              - lidarr
              - readarr
              - prowlarr
      toPorts:
        - ports:
            - port: "8080"
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "51130"
              protocol: TCP
            - port: "51130"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
          matchExpressions:
            - key: "k8s:k8s-app"
              operator: In
              values:
              - kube-dns
              - node-local-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 10.229.97.0/24
      toPorts:
        - ports:
            - port: "7656"
              protocol: TCP
            - port: "7656"
              protocol: TCP
    - toCIDRSet:
        - cidr: ::/0
          except:
            - fc00::/7
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 172.16.0.0/12
